stopping iOS button flicker using transition: 0s

--- a/CSS/index/projects_mediaqueries.css
+++ b/CSS/index/projects_mediaqueries.css
@@ -431,6 +431,7 @@
 
     .prevButton, .nextButton{
         cursor: none;
+        transition: 0s;
     }
 
     .prevButton:hover, .nextButton:hover{
